modified:   pom.xml 	modified:   scripts/InstallApps.sh 	new file:   src/main/java/com/radioip/backend/config/AppearanceConfig.java 	modified:   src/main/java/com/radioip/backend/config/IceWatchConfig.java 	modified:   src/main/java/com/radioip/backend/config/Security_Config.java 	new file:   src/main/java/com/radioip/backend/controller/AdminSettingsController.java 	new file:   src/main/java/com/radioip/backend/controller/AdminUserController.java 	new file:   src/main/java/com/radioip/backend/controller/ScheduleStatusController.java 	modified:   src/main/java/com/radioip/backend/controller/StaticPageController.java 	new file:   src/main/java/com/radioip/backend/model/LocalUser.java 	new file:   src/main/java/com/radioip/backend/service/LocalUserDetailsService.java 	new file:   src/main/java/com/repository/LocalUserRepository.java 	modified:   src/main/resources/application.properties 	new file:   src/main/resources/static/css/dashboard.css 	modified:   src/main/resources/static/dashboard.html 	modified:   src/main/resources/static/index.html 	new file:   src/main/resources/static/js/dashboard.js 	modified:   target/backend-0.0.1-SNAPSHOT.jar.original 	modified:   target/classes/application.properties 	modified:   target/classes/com/radioip/backend/config/IceWatchConfig.class 	modified:   target/classes/static/index.html 	modified:   target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst 	modified:   target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst